service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubarch-service
spec:
  selector:
    app: kubarch
  ports:
    - protocol: TCP
      port: 9001
      targetPort: 8000
  type: LoadBalancer
