ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubarch-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kuberantes.io/ingress.calss: "nginx"
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp/egorfomichev($|/)(.*)
            pathType: Prefix
            backend:
              service:
                name: kubarch-service
                port:
                  number: 9001
